--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "git add . && npm run update"
+      "pre-commit": "npm run update && git add ."
    }
   },
   "keywords": [],
